# FFXIV-Character-Card-Studio

./: .env.example  .gitignore  AGENTS.md  Dockerfile  LICENSE  README.md  docker-compose.yml  prepare_dataset.ps1  pyproject.toml  requirements-ml.txt  requirements.txt  run.ps1  triage.ps1
app/: config.py  main.py  schemas.py
docs/: architecture.md  baseline_experiment.md  character-lora.md  data_license_notes.md  data_preparation.md  gpu_and_models.md  hallucination_control.md  knowledge-layer.md  limitations.md  manual_experiments.md  model_downloads.md  progress-log.md  rag_pipeline.md  vlm_pipeline.md
docs_source/: README.md  glossary.md  sample_crafting_notes.md  sample_job_notes.md  sample_raid_notes.md
eval/: evaluation_report_template.md  expected_sources.json  test_questions.json
models/: README.md  model-manifest.example.yaml
rag/: answer_generator.py  chunker.py  citation_formatter.py  document_loader.py  embedder.py  prompt_builder.py  reranker.py  retriever.py  vector_store.py
sample_data/: README.md  demo_queries.json
scripts/: build_index.py  build_race_index.py  check_environment.py  clean_vector_db.py  evaluate_answers.py  evaluate_retrieval.py  prepare_character_dataset.py  prepare_race_datasets.py  render_card_demo.py  run_baseline_experiment.py  run_chat.py  triage_screenshots.py
src/: config.py
tests/: test_asset_resolver.py  test_assets.py  test_card_layout.py  test_content_pack.py  test_entities.py  test_entity_catalog.py  test_gear.py  test_gear_recognizer.py  test_generation_spec.py  test_head_traits_merge.py  test_health.py  (+11 more)
(+60 files in other folders)
